Bai tap session 4

--- a/casestudy/#1.YeuCau1/demo1.html
+++ b/casestudy/#1.YeuCau1/demo1.html
@@ -6,16 +6,17 @@
 </head>
 <body>
 <script>
-    let customerName = prompt('Enter Customer Name : ');
-    let isCard = prompt('Enter isCard :');
-    let birthCustomer = prompt('Enter birthCustomer : ');
-    let emailCustomer = prompt('Enter emaiCustomer : ');
-    let addressCustomer = prompt('Enter addressCustomer : ');
-    let typeCustomer = prompt('Enter typeCustomer : ');
-    let discount = prompt('Enter discount : ');
-    let quantityIncluded = prompt('Enter quaitityIncluded :');
-    let rentDays =prompt('Enter rentDays :');
-    let serviceType = prompt('Enter serviceType : ');
+    let customerName = prompt("Enter Customer Name :" );
+    let isCard = prompt("Enter isCard :");
+    let birthCustomer = prompt("Enter birthCustomer : ");
+    let emailCustomer = prompt("Enter emaiCustomer : ");
+    let addressCustomer = prompt("Enter addressCustomer : ");
+    let typeCustomer = prompt("Enter typeCustomer : ");
+    let discount = prompt("Enter discount : ");
+    let quantityIncluded = prompt("Enter quaitityIncluded :");
+    let typeRoom = prompt("Enter type room : ")
+    let rentDays =prompt("Enter rentDays :");
+    let serviceType = prompt("Enter serviceType : ");
     let totalPay = 500* parseInt(rentDays)*(1-parseFloat(discount)/100);
     //HTML notification
     alert(
