--- a/Mang/TuDien.html
+++ b/Mang/TuDien.html
@@ -20,6 +20,7 @@
 
             }else {
                 alert("The word is not found");
+                break;
             }
         }
     </script>
