--- a/Ham/TimGiaTrijNhoNhat.html
+++ b/Ham/TimGiaTrijNhoNhat.html
@@ -31,7 +31,7 @@
         // alert("Số nhỏ nhất là :"+min3);
         // alert("Số nhỏ nhất là :"+min4);
 
-    if (false) {
+    if (minArray(arr1)) {
         alert("Dãy rỗng  :" + min);
         alert("Dãy rỗng   :" + min2);
         alert("Dãy rỗng  :" + min3);
