--- a/casestudy/#3 .YeuCau3/YeuCau3.html
+++ b/casestudy/#3 .YeuCau3/YeuCau3.html
@@ -6,12 +6,92 @@
 </head>
 <body>
 <script>
-    let checkValiDate =false;
+    let checkValiDate = false;
     let emailCustomer;
-    let birthCustomer ;
+    let birthCustomer;
+    let idCard;
 
-    // let customerName = prompt("Enter Customer Name :" );
-    // let isCard = prompt("Enter isCard :");
+    let discount;
+    let rentDay;
+    let numberOfAccompanying;
+
+
+    let customerName = prompt("Enter Customer Name :");
+    let nameStadardized = "";
+    customerName = customerName.trim().toLocaleLowerCase();
+    for (let i = 0; i < customerName.length; i++) {
+        if (customerName.charAt(i) === " " && customerName.charAt(i + 1) === " ") {
+            continue;
+        }
+        if (i === 0 || customerName.charAt(i-1) ===" ") {
+            nameStadardized += customerName.charAt(i).toLocaleLowerCase();
+            continue;
+        }
+        nameStadardized += customerName.charAt(i);
+    }
+    customerName = nameStadardized;
+
+    do {
+        checkValiDate = false;
+        numberOfAccompanying = prompt("Enter a number of Accompanying");
+        if (!isNaN(numberOfAccompanying)) {
+            numberOfAccompanying = Number.parseFloat(numberOfAccompanying);
+        }
+        if (numberOfAccompanying >= 0 && (numberOfAccompanying)) {
+            checkValiDate = true;
+        }
+        if (!checkValiDate) {
+            alert("numberOfAccompanying Invalid !!!Please Try Again");
+        }
+    } while (!checkValiDate);
+
+
+    do {
+        checkValiDate = false;
+        rentDay = prompt("Enter RentDay");
+        if (!isNaN(rentDay)) {
+            rentDay = Number.parseFloat(rentDay);
+        }
+        if (rentDay > 0 && Number.parseInt(rentDay)) {
+            checkValiDate = true;
+        }
+        if (!checkValiDate) {
+            alert("rentDay Invalid !!! Please Try Again");
+        }
+    } while (!checkValiDate);
+    do {
+        checkValiDate = false;
+        discount = prompt("Enter discount : ");
+        if (!isNaN(discount)) {
+            discount = Number.parseFloat(discount);
+        }
+        if (discount > 0) {
+            checkValiDate = true;
+        }
+        if (!checkValiDate) {
+            alert("Discount Invaild !!!Please Try Again")
+        }
+    } while (!checkValiDate);
+
+
+    do {
+        checkValiDate = false;
+        idCard = prompt("Enter Id Card Customer");
+        if (isNaN(idCard)) {
+            alert("Id Card Is Invaliad. Please Try Again !!!");
+            continue;
+        }
+        idCard = Number.parseFloat(idCard);
+        if (!Number.isInteger(idCard)) {
+            alert("Id Card Is Invaliad. Please Try Again !!!")
+            continue;
+        }
+        if (idCard >= 100000000 && idCard <= 999999999) {
+            checkValiDate = true;
+        }
+    } while (!checkValiDate);
+
+
     do {
         checkValiDate = true;
         birthCustomer = prompt("Enter birthCustomer (dd/MM/yyyy) : ");
@@ -32,50 +112,53 @@
                 checkValiDate = true;
             }
         }
-        if (!checkValiDate){
+        if (!checkValiDate) {
             alert("Birth is invaild !!! Please try again");
         }
-    }while (!checkValiDate)
+    }
+    while (!checkValiDate);
 
-    do{
+
+    do {
         checkValiDate = true;
         let countDoc = 0;
         let countAt = 0;
         emailCustomer = prompt("Enter emaiCustomer : ");
-        for (let i = 0;i<emailCustomer.length;i++){
-            if (emailCustomer.charAt(i) == "@"){
+        for (let i = 0; i < emailCustomer.length; i++) {
+            if (emailCustomer.charAt(i) === "@") {
                 countAt++;
             }
-            if (emailCustomer.charAt(i) =="."){
+            if (emailCustomer.charAt(i) === ".") {
                 countDoc++;
             }
         }
-        if (countAt !== 1 || countDoc < 1){
+        if (countAt !== 1 || countDoc < 1) {
             checkValiDate = false;
             alert("Email invalid !! Please Try Again");
         }
     }
 
-    while (!checkValiDate)
+    while (!checkValiDate);
 
-    // let addressCustomer = prompt("Enter addressCustomer : ");
+
     // let typeCustomer = prompt("Enter typeCustomer : ");
-    // let discount = prompt("Enter discount : ");
+
     // let quantityIncluded = prompt("Enter quaitityIncluded :");
     // let typeRoom = prompt("Enter type room : ")
-    // let rentDays =prompt("Enter rentDays :");
+
     // let serviceType = prompt("Enter serviceType : ");
     // let totalPay = 500* parseInt(rentDays)*(1-parseFloat(discount)/100);
     //HTML notification
     alert(
-        // "Information of the customer :\n"+
-        // "Name :"+customerName +
-        // "\n isCard :"   +   isCard +
-        "\n birthCustorm : " +  birthCustomer +
-        " \n emailCustomer : " +    emailCustomer
+        "Information of the customer :\n" +
+        "Name :"+customerName +
+        "\n isCard :" + idCard +
+        "\n birthCustorm : " + birthCustomer +
+        " \n emailCustomer : " + emailCustomer +
+        "\n RentDay : " + rentDay +
         // "\n Address:" + addressCustomer +
         // "\n Type : " +  typeCustomer +
-        // " \n discount : " + discount +
+        " \n discount : " + discount
         // " \n quanlitily : " +   quantityIncluded +
         // " \n  TypeService : " + serviceType +
         // " \n TotalPay : " + totalPay
