bai tap session  7

--- a/DoiTuong/Circle.html
+++ b/DoiTuong/Circle.html
@@ -5,11 +5,10 @@
     <title>Circle</title>
 </head>
 <body>
-<script>
-    let Circle = function (radius) {
-        thís.radius = radius;
-    }
-    this.get
-</script>
+<input type="text" id="radiusCircle"/>
+<input type="button" id="" onclick="TinhToan()" value="submit"/>
+<p id="demo"></p>
+<script type="text/javascript" src="run.js"></script>
+<script type="text/javascript" src="dinhnghia.js"></script>
 </body>
 </html>
