Bai tap session 8-casestudy 6

--- a/DoiTuong2/Apple-Human/HumnanEatApple.html
+++ b/DoiTuong2/Apple-Human/HumnanEatApple.html
@@ -19,7 +19,7 @@
     <input type="button" onclick="display()" value="DISPLAY">
     <input type="button" onclick="eatApple()" value="EAT">
 </form>
-<script type="text/javascript" src="dingnhia.js.js"></script>
+<script type="text/javascript" src="dingnhia.js"></script>
 <script type="text/javascript" src="run.js"></script>
 </body>
 </html>
